--- a/blog/templates/post_create.html
+++ b/blog/templates/post_create.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-xs-offset-3 col-xs-6">
-    <h1>Create New Article</h1>
+    <h1 align="center">Create New Article</h1>
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
