--- a/blog/templates/category_index.html
+++ b/blog/templates/category_index.html
@@ -3,14 +3,19 @@
 {% block content %}
 <div class="col-xs-offset-3 col-xs-6">
 
-    <h1>Category List</h1>
-    {% for cat in category_list %}
-        <h3>{{cat.name}} {{cat.post_number}} posts</h3>
-        <a href="category/{{cat.pk}}">detail</a>
-        <a href="category/delete/{{cat.pk}}">delete</a>
-    {% empty %}
-        <h3>no post yet</h3>
-    {% endfor %}
+    <h1 align="center">Category List</h1>
+    <ul class="list-group">
+        {% for cat in category_list %}
+            <li class="list-group-item">
+                {{cat.name}}
+                <a href="category/{{cat.pk}}">detail</a>
+                <a href="category/delete/{{cat.pk}}">delete</a>
+                <span class="badge">{{cat.post_number}}</span>
+            </li>
+        {% empty %}
+            <h3>no post yet</h3>
+        {% endfor %}
+    </ul>
     <div>
         <a href="category/create">Create New Category</a>
     </div>
