--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -19,24 +19,34 @@
     <div class="col-xs-offset-3 col-xs-6 container-fluid">
         <div class="navbar-left">
             <a class="navbar-brand" href="/post">
-                <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+                <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                Home
             </a>
+
             <a class="navbar-brand" href="/post/create">
-                <span class="glyphicon glyphicon-check" aria-hidden="true"></span> New
+                <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
+                New
             </a>
+
             <a class="navbar-brand" href="/category">
-                <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span> Categories
+                <span class="glyphicon glyphicon-bookmark" aria-hidden="true"></span>
+                Categories
             </a>
+
             <a class="navbar-brand" href="https://weili-git.github.io">
-                <i class="fa fa-github-square fa-lg" aria-hidden="true"></i> Github
+                <i class="fa fa-github-square fa-lg" aria-hidden="true"></i>
+                Github
             </a>
+
         </div>
-        <form class="navbar-form navbar-right">
+
+        <form class="navbar-form navbar-right" method="get" action="{% url 'search' %}">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Title">
+                <input name="keyword" type="text" class="form-control" placeholder="Title" required>
             </div>
             <button type="submit" class="btn btn-default">
-                <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                Search
             </button>
         </form>
     </div>
