--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="col-xs-offset-3 col-xs-6">
-    <h1>{{post.title}}</h1>
+    <h1 align="center">{{post.title}}</h1>
 <!--    <p>{{post.body}}</p>-->
     {{post.body|safe}}
     <!-- Button trigger modal -->
