--- a/blog/templates/search.html
+++ b/blog/templates/search.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 <div class="col-xs-offset-3 col-xs-6">
-
-    <h1 align="center">{{category.name}}</h1>
+    <h1 align="center">Search Results</h1>
     {% for post in post_list %}
         <div class="panel panel-default">
         <div class="panel-heading">
-            <a href="../../post/{{post.pk}}" style="color:gray;font-size:25px;">
+            <a href="../post/{{post.pk}}" style="color:gray;font-size:25px;">
                 <span class="glyphicon glyphicon-list" aria-hidden="true" style="font-size:20px;"></span>
                 {{post.title}}
             </a>
@@ -24,16 +23,16 @@
         <div class="panel-body">
             {{post.excerpt}}
             <br/><br/>
-            <a href="../../post/update/{{post.pk}}" class="btn btn-primary btn-xs">
+            <a href="../post/update/{{post.pk}}" class="btn btn-primary btn-xs">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Update
             </a>
-            <a href="../../post/delete/{{post.pk}}" class="btn btn-danger btn-xs">
+            <a href="../post/delete/{{post.pk}}" class="btn btn-danger btn-xs">
                 <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Remove
             </a>
         </div>
     </div>
     {% empty %}
-        <h3>No post in this category yet</h3>
+        <h3>Sorry, no related results</h3>
     {% endfor %}
 </div>
 {% endblock %}
